Stylesheet/emote/tag updates 2014-12-01

--- a/source-css/adery.css
+++ b/source-css/adery.css
@@ -1,5 +1,5 @@
-.arrow.up { background: url(%%upsmirk%%) no-repeat 0 0; }
-.arrow.upmod { background: url(%%upsmirked%%) no-repeat 0 0; }
+/* .arrow.up { background: url(%%upsmirk%%) no-repeat 0 0; }
+.arrow.upmod { background: url(%%upsmirked%%) no-repeat 0 0; } */
 .arrow.down { background: url(%%downfrown%%) no-repeat 0 0; }
 .arrow.downmod { background: url(%%downfrowned%%) no-repeat 0 0; }
 
