--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -349,19 +349,23 @@ a[href|="/cheesesocks"], a[href|="/festivebuttplug"], a[href|="/wetqueen"], a[hr
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* b200x200b 'motes. */
-a[href|="/dirtypinkie"], a[href|="/nightcest"]
+a[href|="/dirtypinkie"], a[href|="/nightcest"], a[href|="/celestbj"]
 {background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
 a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"], a[href|="/cadgym"], a[href|="/wetcora"], a[href|="/brushmyass"], a[href|="/nmmpresents"], a[href|="/pinkiepop"]
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
+/* 250x250b 'motes. */
+a[href|="/futafap"]
+{background-image:url(%%250x250b%%);width:250px;height:250px;display:block;float:left;}
+
 /* 300x300a 'motes */
 a[href|="/example6"]
 {background-image:url(%%300x300a%%);width:300px;height:300px;display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[href|="/cheesesocks"], a[href|="/plotpair"],a[href|="/examplecode6"], 
+a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[href|="/cheesesocks"], a[href|="/plotpair"],a[href|="/examplecode6"], a[href|="/futafap"]
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
@@ -369,7 +373,7 @@ a[href|="/festivebuttplug"], a[href|="/lickusclean"], a[href|="/seductivecadance
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/wetqueen"], a[href|="/tootight"], a[href|="/princesshug"],    
+a[href|="/wetqueen"], a[href|="/tootight"], a[href|="/princesshug"], a[href|="/celestbj"]    
 {background-position: -200% 0%;}
 
 /* Grid pos 3,0 'motes */
@@ -437,8 +441,12 @@ a[href|="/twidrip"], a[href|="/twipanties"], a[href|="/twibegentle"], a[href|="/
 {background-image:url(%%misfitsf%%);display:block;float:left;}
 
 /* Misfits g */
-a[href|="/raricock"], a[href|="/pussylantern"], a[href|="/sonatass"], a[href|="/queenass"], a[href|="/pillowtalk"]
+a[href|="/raricock"], a[href|="/pussylantern"], a[href|="/sonatass"], a[href|="/queenass"], a[href|="/pillowtalk"], a[href|="/donottaptheglass"], a[href|="/minty"], a[href|="/colgatepresents"]
 {background-image:url(%%misfitsg%%);display:block;float:left;}
+
+/* Misfits h */
+a[href|="/ajcumshot"], a[href|="/twihearts"], a[href|="/bookcatbird"], a[href|="/idreamofdashie"], a[href|="/flutterplug"], a[href|="/dontbeanass"], a[href|="/trixiecum"], a[href|="/chrysalispresents"]
+{background-image:url(%%misfitsh%%);display:block;float:left;}
 
 
 /* Animated Emotes */
@@ -498,5 +506,15 @@ a[href|="/pussylantern"] {width: 148px;height:150px;background-position: -158px 
 a[href|="/pillowtalk"] {width: 215px;height:200px;background-position: -161px -200px;}
 a[href|="/sonatass"] {width: 147px;height:200px;background-position: -306px 0px;}
 a[href|="/queenass"] {width: 161px;height:200px;background-position: 0px -250px;}
-a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
+a[href|="/donottaptheglass"] {width: 198px;height:200px;background-position: 0px -450px;}
+a[href|="/minty"] {width: 120px;height:200px;background-position: -376px -200px;}
+a[href|="/colgatepresents"] {width: 200px;height:143px;background-position: -198px -400px;}
+a[href|="/ajcumshot"] {width: 165px;height:200px;background-position: 0px 0px;}
+a[href|="/twihearts"] {width: 135px;height:200px;background-position: -169px 0px;}
+a[href|="/idreamofdashie"] {width: 124px;height:200px;background-position: -307px 0px;}
+a[href|="/bookcatbird"] {width: 250px;height:174px;background-position: 0px -205px;}
+a[href|="/flutterplug"] {width: 200px;height:162px;background-position: -250px -205px;}
+a[href|="/dontbeanass"] {width: 250px;height:183px;background-position: 0px -379px;}
+a[href|="/trixiecum"] {width: 200px;height:166px;background-position: -250px -367px;} 
+a[href|="/chrysalispresents"] {width: 158px;height:200px;background-position: 0px -562px;}
 a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
