--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -1,4 +1,4 @@
-/*Background upload a new file with the filename background at 500kb or less to allow it to upload and replace the background file. You have to hit save when you are done or it will not show the image globally. Normally I will do the opacity around 15% or less to make sure it does not disrupt the text. For ones that work like the present one I will add 300px to the side so they pass the sidebar.
+/*Background upload a new file with the filename bg at 500kb or less to allow it to upload and replace the background file. You have to hit save when you are done or it will not show the image globally. Normally I will do the opacity around 15% or less to make sure it does not disrupt the text. For ones that work like the present one I will add 300px to the side so they pass the sidebar.
 
 To move it from the side to the middle change Background-position: bottom right; to Background-position: center center;*/
 
@@ -867,386 +867,6 @@ text-decoration:underline;
 background: white;
 }
 
-a[href|="/twiquery"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 100px;
-    height: 100px;
-    background-image: url(%%o3UqK%%)
-    }
-a[href|="/twiquery"] {
-    background-position: -0px -0px
-    }
-
-
-a[href|="/vinylwhat"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%vinylwhat%%) 
-    } 
-a[href|="/vinylwhat"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/pinkiehi"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%pinkiehi%%) 
-    } 
-a[href|="/pinkiehi"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/twistudy"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%twistudy%%) 
-    } 
-a[href|="/twistudy"] { 
-    background-position: -0px -0px 
-    }
-
-
-a[href|="/twibreak"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%twisad%%) 
-    } 
-a[href|="/twibreak"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/scootbrag"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%scootbrag%%) 
-    } 
-a[href|="/scootbrag"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/ppnervous"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%ppnervous%%) 
-    } 
-a[href|="/ppnervous"] { 
-    background-position: -0px -0px 
-    }
-a[href|="/adorabelle"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%adorabelle%%)
-    } 
-a[href|="/adorabelle"] { 
-    background-position: -0px -0px;
-    }
-a[href|="/applegrump"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%applegrump%%) 
-    } 
-a[href|="/applegrump"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/rargasp"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%twentypercentcooler%%)
-    } 
-a[href|="/rargasp"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/abworry"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%abworry%%)
-    } 
-a[href|="/abworry"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/ppreference"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%ppreference%%)
-    } 
-a[href|="/ppreference"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/cookie"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%cookie2%%)
-    } 
-a[href|="/cookie"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/muffin"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%cookie2%%)
-    } 
-a[href|="/muffin"] { 
-    background-position: -0px -0px 
-    }
-
-
-a[href|="/roseluck"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%roseluck%%)
-    } 
-a[href|="/roseluck"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/sbsmile"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%sbsmile%%)
-    } 
-a[href|="/sbsmile"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/lyrahoof"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%lyrahoof%%)
-    } 
-a[href|="/lyrahoof"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/bonhoof"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%bonhoof%%)
-    } 
-a[href|="/bonhoof"] { 
-    background-position: -0px -0px 
-    }
-
-a[href|="/notagain"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%notagain%%)
-    } 
-a[href|="/notagain"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/cheerteach"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%cheerteach%%)
-    } 
-a[href|="/cheerteach"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/lunablush"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%lunablush%%)
-    } 
-a[href|="/lunablush"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/trixihappy"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%trixihappy%%)
-    } 
-a[href|="/trixihappy"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/lunaread"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%lunaread%%)
-    } 
-a[href|="/lunaread"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/shyhug"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%flutterhug%%)
-    } 
-a[href|="/shyhug"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/applebamm"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%applehammer%%)
-    } 
-a[href|="/applebamm"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/forgotshy"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%forgotshy%%)
-    } 
-a[href|="/forgotshy"] { 
-    background-position: -0px -0px;
-    }
-a[href|="/cadancehappy"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%happycadence%%)
-    } 
-a[href|="/cadancehappy"] { 
-    background-position: -0px -0px;
-    }
-a[href|="/flutterhelp"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%flutterhelp%%)
-    } 
-a[href|="/flutterhelp"] { 
-    background-position: -0px -0px;
-    }
-a[href|="/flutterpaint"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%flutterpaint%%)
-    } 
-a[href|="/flutterpaint"] { 
-    background-position: -0px -0px;
-    }
-a[href|="/yourock"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%yourock%%)
-    } 
-a[href|="/yourock"] { 
-    background-position: -0px -0px;
-    }
-a[href|="/snipsmote"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%snipsmote%%)
-    } 
-a[href|="/snipsmote"] { 
-    background-position: -0px -0px;
-    }
-
-a[href|="/thankyakindly"] { 
-    display: block; 
-    clear: none; 
-    float: left; 
-    width: 100px; 
-    height: 100px; 
-    background-image: url(%%thankyakindly%%)
-    } 
-a[href|="/thankyakindly"] { 
-    background-position: -0px -0px;
-    }
-
 /* Announcement Bar */
 .pagename {
     font-size: 12pt
@@ -1307,3 +927,172 @@ a.author[href$="/The8BitF0x"]:after {
     display: block;
     letter-spacing: normal
 } 
+
+a[href|='/flutterhelp'], a[href|='/cookie'], a[href|='/cheerteach'], a[href|='/lyrahoof'], a[href|='/bonhoof'], a[href|='/applegrump'], a[href|='/applebamm'], a[href|='/adorabelle'], a[href|='/abwhat'], a[href|='/yourock'], a[href|='/vinylwhat'], a[href|='/twistudy'], a[href|='/twibreak'], a[href|='/rargasp'], a[href|='/trixihappy'], a[href|='/thankyakindly'], a[href|='/snipsmote'], a[href|='/scootbrag'], a[href|='/sbsmile'], a[href|='/roseluck'], a[href|='/ppreference'], a[href|='/ppheh'], a[href|='/pinkiehi'], a[href|='/twiquery'], a[href|='/notagain'], a[href|='/lunaread'], a[href|='/lunablush'], a[href|='/cadancehappy'], a[href|='/forgotshy'], a[href|='/flutterpaint']:hover {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%emotes%%)
+    }
+a[href|='/flutterhelp'] {
+    width: 100px;
+    height: 100px;
+    background-position: -0px -0px
+    }
+a[href|='/cookie'] {
+    width: 100px;
+    height: 100px;
+    background-position: -100px -0px
+    }
+a[href|='/cheerteach'] {
+    width: 100px;
+    height: 100px;
+    background-position: -200px -0px
+    }
+a[href|='/lyrahoof'] {
+    width: 100px;
+    height: 100px;
+    background-position: -300px -0px
+    }
+a[href|='/bonhoof'] {
+    width: 100px;
+    height: 100px;
+    background-position: -400px -0px
+    }
+a[href|='/applegrump'] {
+    width: 100px;
+    height: 100px;
+    background-position: -0px -100px
+    }
+a[href|='/applebamm'] {
+    width: 100px;
+    height: 100px;
+    background-position: -100px -100px
+    }
+a[href|='/adorabelle'] {
+    width: 100px;
+    height: 100px;
+    background-position: -200px -100px
+    }
+a[href|='/abwhat'] {
+    width: 100px;
+    height: 100px;
+    background-position: -300px -100px
+    }
+a[href|='/yourock'] {
+    width: 100px;
+    height: 100px;
+    background-position: -400px -100px
+    }	
+a[href|='/vinylwhat'] {
+    width: 100px;
+    height: 100px;
+    background-position: -0px -200px
+    }
+a[href|='/twistudy'] {
+    width: 100px;
+    height: 100px;
+    background-position: -100px -200px
+    }
+a[href|='/twibreak'] {
+    width: 100px;
+    height: 100px;
+    background-position: -200px -200px
+    }
+a[href|='/rargasp'] {
+    width: 100px;
+    height: 100px;
+    background-position: -300px -200px
+    }
+a[href|='/trixihappy'] {
+    width: 100px;
+    height: 100px;
+    background-position: -400px -200px
+    }	
+a[href|='/thankyakindly'] {
+    width: 100px;
+    height: 100px;
+    background-position: -0px -300px
+    }
+a[href|='/snipsmote'] {
+    width: 100px;
+    height: 100px;
+    background-position: -100px -300px
+    }
+a[href|='/scootbrag'] {
+    width: 100px;
+    height: 100px;
+    background-position: -200px -300px
+    }
+a[href|='/sbsmile'] {
+    width: 100px;
+    height: 100px;
+    background-position: -300px -300px
+    }
+a[href|='/roseluck'] {
+    width: 100px;
+    height: 100px;
+    background-position: -400px -300px
+    }	
+a[href|='/ppreference'] {
+    width: 100px;
+    height: 100px;
+    background-position: -0px -400px
+    }
+a[href|='/ppheh'] {
+    width: 100px;
+    height: 100px;
+    background-position: -100px -400px
+    }
+a[href|='/pinkiehi'] {
+    width: 100px;
+    height: 100px;
+    background-position: -200px -400px
+    }
+a[href|='/twiquery'] {
+    width: 100px;
+    height: 100px;
+    background-position: -300px -400px
+    }
+a[href|='/notagain'] {
+    width: 100px;
+    height: 100px;
+    background-position: -400px -400px
+    }	
+a[href|='/lunaread'] {
+    width: 100px;
+    height: 100px;
+    background-position: -0px -500px
+    }
+a[href|='/lunablush'] {
+    width: 100px;
+    height: 100px;
+    background-position: -100px -500px
+    }
+a[href|='/cadancehappy'] {
+    width: 100px;
+    height: 100px;
+    background-position: -200px -500px
+    }
+a[href|='/forgotshy'] {
+    width: 100px;
+    height: 100px;
+    background-position: -300px -500px
+    }
+a[href|='/flutterpaint'] {
+    width: 100px;
+    height: 100px;
+    background-position: -400px -500px
+    }	
+	
+a[href|="/shyhug"] { 
+    display: block; 
+    clear: none; 
+    float: left; 
+    width: 100px; 
+    height: 100px; 
+    background-image: url(%%flutterhug%%)
+    } 
+a[href|="/shyhug"] { 
+    background-position: -0px -0px;
+    }
