--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -941,7 +941,7 @@ a[href|="/swordserious"] {width:88px;height:132px;background-position: -815px -1
 
 /* SYNTAX ERROR */ 
 
-a[href|="/sebored"], a[href|="/sehahaha"], a[href|="/sesly"], a[href|="/synpoker"], a[href|="/synponder"], a[href|="/synsquint"], a[href|="/syntaxderp"], a[href|="/syntaxadorkable"], a[href|="/sehuhhuh"], a[href|="/sejoy"], a[href|="/seohhi"], a[href|="/synsmile"], a[href|="/secute"], a[href|="/squintax"], a[href|="/syntaxmeerkat"], a[href|="/robyxmeerkat"], a[href|="/synkathug"], a[href|="/seboring"], a[href|="/sefacehoof"], a[href|="/synwb"], a[href|="/sesup"], a[href|="/synfun"], a[href|="/synangry"], a[href|="/syncutestare"], a[href|="/sepout"], a[href|="/sehugs"], a[href|="/sewhaaat"], a[href|="/seshy"], a[href|="/sesleepy"], a[href|="/secolt"], a[href|="/synskip"], a[href|="/seshrug"], a[href|="/sestare"]
+a[href|="/sebored"], a[href|="/sehahaha"], a[href|="/sesly"], a[href|="/synpoker"], a[href|="/synponder"], a[href|="/synsquint"], a[href|="/syntaxderp"], a[href|="/syntaxadorkable"], a[href|="/sehuhhuh"], a[href|="/sejoy"], a[href|="/seohhi"], a[href|="/synsmile"], a[href|="/secute"], a[href|="/squintax"], a[href|="/syntaxmeerkat"], a[href|="/robyxmeerkat"], a[href|="/synkathug"], a[href|="/seboring"], a[href|="/sefacehoof"], a[href|="/synwb"], a[href|="/sesup"], a[href|="/synfun"], a[href|="/synangry"], a[href|="/syncutestare"], a[href|="/sepout"], a[href|="/sehugs"], a[href|="/sewhaaat"], a[href|="/seshy"], a[href|="/sesleepy"], a[href|="/secolt"], a[href|="/synskip"], a[href|="/seshrug"], a[href|="/sestare"], a[href|="/spantaxhug"]
 {background-image:url(%%syntax-error%%);display:block;float:left;}
 
 a[href|="/sebored"] {width:88px;height:70px;background-position: 0 0;}
@@ -976,6 +976,7 @@ a[href|="/secolt"] {width:61px;height:70px;background-position: -202px -370px;}
 a[href|="/synskip"] {width:119px;height:150px;background-position: -668px -220px;}
 a[href|="/seshrug"] {width:73px;height:70px;background-position: -263px -370px;}
 a[href|="/sestare"] {width:67px;height:70px;background-position: -336px -370px;}
+a[href|="/spantaxhug"] {width:162px;height:150px;background-position: -787px -220px;}
 
 /* END OF SYNTAX ERROR */
 
