--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -732,6 +732,16 @@ Height: 259px;
 background-image: url(%%jclop%%) !important
 }
 
+a[href="/imsopissed"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 286px;
+Height: 161px;
+background-image: url(%%imsopissed%%) !important
+}
+
 a[href="/twiwantshugs"] {
 background-position: 0px 0px;
 Display: block;
