--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -435,7 +435,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -451,7 +451,7 @@ a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletaria
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150d 'motes */
-a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"]
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"], a[href|="/christmaslyra"]
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -512,7 +512,7 @@ a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], 
 {background-image:url(%%misfitsj%%);display:block;float:left;}
 
 /* Misfits k */
-a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|="/humaud"], a[href|="/cutemena"], a[href|="/hipstercad"]
+a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|="/humaud"], a[href|="/cutemena"], a[href|="/hipstercad"], a[href|="/pinkiebreak"], a[href|="/fluttertree"], a[href|="/abbowling"], a[href|="/sword"], a[href|="/lutece"]
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /*
@@ -540,7 +540,7 @@ a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"], a[href|="/sassybloom"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
@@ -596,7 +596,7 @@ a[href|="/flutterdoubt"], a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/l
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"]
+a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
@@ -1174,3 +1174,8 @@ a[href|="/sadprincesshorse"] {width:200px;height:132px;background-position: -237
 a[href|="/humaud"] {width:90px;height:200px;background-position: 0 -160px;}
 a[href|="/cutemena"] {width:92px;height:200px;background-position: -90px -160px;}
 a[href|="/hipstercad"] {width:70px;height:97px;background-position: 0 -360px;}
+a[href|="/pinkiebreak"] {width:200px;height:148px;background-position: -437px 0;}
+a[href|="/fluttertree"] {width:113px;height:200px;background-position: -182px -150px;}
+a[href|="/abbowling"] {width:150px;height:117px;background-position: -70px -360px;}
+a[href|="/sword"] {width:27px;height:100px;background-position: -637px 0;}
+a[href|="/lutece"] {width:200px;height:135px;background-position: -295px -132px;}
