--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -1,6 +1,6 @@
 /* /r/ponymotesextra CSS!
  * Just animotes from /r/PonyMotes really.
- * Image Count: 49/50 - It looks like /r/ponymotesextra2 is VERY IMMINENT.
+ * Image Count: 50/50 - OH NOO!
  */
 
 /* Animated Emotes */
@@ -53,6 +53,7 @@ a[href|="/chairdash"] {background-image: url(%%chairdash%%);width:149px;height:1
 a[href|="/runningdashie"] {background-image: url(%%runningdashie%%);width:99px;height:100px;display:block;float:left;}
 a[href|="/ninjadash"] {background-image: url(%%ninjadash%%);width:250px;height:101px;display:block;float:left;}
 a[href|="/twipanic"] {background-image: url(%%twipanic%%);width:125px;height:100px;display:block;float:left;}
+a[href|="/colgatebob"], a[href|="/colgatebop"] {background-image: url(%%colgatebop%%);width:150px;height:140px;display:block;float:left;}
 
 /* Non-Animated Emotes */
 /* Just kidding, they're all animated here. */
