--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -129,14 +129,15 @@ div#header-bottom-left ul.tabmenu {
 
 .side h6 {
   position: absolute;
-  top: 114px;
-  left: 0px;
+  top: 118px;
+  left: 240px;
+  font-size: 12px;
   padding: 14px 0px 14px 60px;
   background:url(%%Crown-Bullet%%) no-repeat 14px 6px;
 }
 
 .content {
-  margin: 43px 5px 0 0;
+  margin: 54px 5px 0 0;
   border-top:2px solid #aa8e8e;
   padding-top:7px;
 }
@@ -403,15 +404,15 @@ a[href|="/ajsup"],a[href|="/ajwhatsgood"],a[href|="/rajsup"],a[href|="/rajwhatsg
   background-position:0 -500%;
 }
 
-a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/rohcomeon"],a[href|="/rsbcomeon"],a[href|="/trixiesmug"],a[href|="/rtrixiesmug"],a[href|="/louder"],a[href|="/rlouder"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],.side .md table tr:nth-of-type(13) td:nth-of-type(1):after,.flair-screwball {
+a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/rohcomeon"],a[href|="/rsbcomeon"],a[href|="/trixiesmug"],a[href|="/rtrixiesmug"],a[href|="/louder"],a[href|="/rlouder"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],a[href|="/sunsetdress"],a[href|="/ssdress"],.side .md table tr:nth-of-type(13) td:nth-of-type(1):after,.flair-screwball {
   background-position:0 -600%;
 }
 
-a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],.flair-wonderbolts {
+a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],.side .md table tr:nth-of-type(15) td:nth-of-type(1):after,.flair-wonderbolts {
   background-position:0 -700%;
 }
 
-a[href|="/twiright"],a[href|="/satistwied"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/abwut"],a[href|="/rabwut"],a[href|="/scootaloo"],a[href|="/rscootaloo"],a[href|="/twiponder"],a[href|="/rtwiponder"],.flair-sweetiebelle {
+a[href|="/twiright"],a[href|="/satistwied"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/abwut"],a[href|="/rabwut"],a[href|="/scootaloo"],a[href|="/rscootaloo"],a[href|="/twiponder"],a[href|="/rtwiponder"],a[href|="/sunsetnailedit"],a[href|="/ssnailedit"],a[href|="/sunsetyes"],a[href|="/ssyes"],.side .md table tr:nth-of-type(17) td:nth-of-type(1):after,.flair-sweetiebelle {
   background-position:0 -800%;
 }
 
@@ -483,7 +484,7 @@ a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/rsbbook"]
   background-position:-100% -700%;
 }
 
-a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/manspike"],a[href|="/rmanspike"],a[href|="/celestia"],a[href|="/rcelestia"],a[href|="/spikewtf"],a[href|="/rspikewtf"],.flair-davenport {
+a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/manspike"],a[href|="/rmanspike"],a[href|="/celestia"],a[href|="/rcelestia"],a[href|="/spikewtf"],a[href|="/rspikewtf"],a[href|="/sunsetfailure"],a[href|="/ssfailure"],.side .md table tr:nth-of-type(17) td:nth-of-type(2):after,.flair-davenport {
   background-position:-100% -800%;
 }
 
@@ -551,7 +552,7 @@ a[href|="/abbored"],a[href|="/abmerp"],a[href|="/rabbored"],a[href|="/rabmerp"],
   background-position:-200% -600%;
 }
 
-a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/raritywhine"],a[href|="/rraritywhine"],a[href|="/lunagasp"],a[href|="/rlunagasp"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/rlily"],a[href|="/rthehorror"],.flair-scootaloo {
+a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/raritywhine"],a[href|="/rraritywhine"],a[href|="/lunagasp"],a[href|="/rlunagasp"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/ssprofile"],a[href|="/sunsetprofile"],.side .md table tr:nth-of-type(15) td:nth-of-type(3):after,.flair-scootaloo {
   background-position:-200% -700%;
 }
 
@@ -619,7 +620,7 @@ a[href|="/rarityreally"],a[href|="/rrarityreally"],a[href|="/soawesome"],a[href|
   background-position:-300% -600%;
 }
 
-a[href|="/applegasp"],a[href|="/rapplegasp"],a[href|="/rdcool"],a[href|="/rrdcool"],a[href|="/fluttercry"],a[href|="/rfluttercry"],.flair-applebloom {
+a[href|="/applegasp"],a[href|="/rapplegasp"],a[href|="/rdcool"],a[href|="/rrdcool"],a[href|="/fluttercry"],a[href|="/rfluttercry"],a[href|="/sunsetokay"],a[href|="/ssokay"],a[href|="/sunsethuh"],a[href|="/sshuh"],.side .md table tr:nth-of-type(15) td:nth-of-type(4):after,.flair-applebloom {
   background-position:-300% -700%;
 }
 
@@ -766,7 +767,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
   width:32px;
 }
 
-a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetuhuh"],a[href|="/ssuhuh"],a[href|="/sunsetwow"],a[href|="/sswow"],a[href|="/sunsetsalute"],a[href|="/sssalute"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"] {
+a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetuhuh"],a[href|="/ssuhuh"],a[href|="/sunsetwow"],a[href|="/sswow"],a[href|="/sunsetsalute"],a[href|="/sssalute"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"],a[href|="/sunsetdress"],a[href|="/ssdress"] {
   display:block;
   clear:none;
   float:left;
@@ -775,7 +776,7 @@ a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|
   background-image:url(%%sunnyamotes%%)!important;
 }
 
-a[href|="/sunnybunch"],a[href|="/sunsetadorable"],a[href|="/ssadorable"],a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/sunsetrage"],a[href|="/ssrage"],a[href|="/innocentsunset"],a[href|="/innocentss"],a[href|="/sunsetgrin"],a[href|="/ssgrin"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/sunsetmine"],a[href|="/ssmine"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/sunsetexplains"],a[href|="/ssexplains"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/sunsetdismissal"],a[href|="/talktothehand"],a[href|="/ssdismissal"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/sunsetyuck"],a[href|="/ssyuck"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/hulasunset"],a[href|="/hulass"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/sunsetplotting"],a[href|="/ssplotting"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"],a[href|="/sunsetawkward"],a[href|="/ssawkward"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],a[href|="/ssleaving"],a[href|="/sunsetleaving"] {
+a[href|="/sunnybunch"],a[href|="/sunsetadorable"],a[href|="/ssadorable"],a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/sunsetrage"],a[href|="/ssrage"],a[href|="/innocentsunset"],a[href|="/innocentss"],a[href|="/sunsetgrin"],a[href|="/ssgrin"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/sunsetmine"],a[href|="/ssmine"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/sunsetexplains"],a[href|="/ssexplains"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/sunsetdismissal"],a[href|="/talktothehand"],a[href|="/ssdismissal"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/sunsetyuck"],a[href|="/ssyuck"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/hulasunset"],a[href|="/hulass"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/sunsetplotting"],a[href|="/ssplotting"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"],a[href|="/sunsetawkward"],a[href|="/ssawkward"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],a[href|="/ssleaving"],a[href|="/sunsetleaving"],a[href|="/ssprofile"],a[href|="/sunsetprofile"],a[href|="/sunsetokay"],a[href|="/ssokay"],a[href|="/sunsethuh"],a[href|="/sshuh"],a[href|="/sunsetnailedit"],a[href|="/ssnailedit"],a[href|="/sunsetyes"],a[href|="/ssyes"],a[href|="/sunsetfailure"],a[href|="/ssfailure"] {
   display:block;
   clear:none;
   float:left;
@@ -1245,8 +1246,28 @@ a[href|="/sunsetgroovin"],a[href|="/ssgroovin"] {
   float: left;
   width: 79px;
   height: 121px;
-  background-image: url(%%sunsetgroovin%%);
+  background-image: url(%%sunsetgroovin%%) !important;
   background-position: 0 0;
+}
+
+a[href|="/mirrorportal"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 59px;
+  height: 112px;
+  background-image: url(%%oddballs%%) !important;
+  background-position: -1243px -150px;
+}
+
+a[href|="/sunsetrock"],a[href|="/ssrock"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 152px;
+  height: 175px;
+  background-image: url(%%oddballs%%) !important;
+  background-position: -1553px 0px;
 }
 
 START-PONYSCRIPT-IGNORE { color: red; }
