--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -79,7 +79,7 @@ a[href^="/redtoxinbob"] {
     background-image: url(%%redtoxinbob%%)
     }
 
-a[href^="/lbexcited"] {
+a[href^="/wlexcited"] {
     background-position: 0px 0px;
     display: block;
     clear: none;
@@ -89,7 +89,7 @@ a[href^="/lbexcited"] {
     background-image: url(%%lbexcited%%)
     }
 
-a[href^="/lbbob"] {
+a[href^="/wlbob"] {
     background-position: 0px 0px;
     display: block;
     clear: none;
@@ -99,7 +99,7 @@ a[href^="/lbbob"] {
     background-image: url(%%lbbob%%)
     }
 
-a[href^="/lbclop"] {
+a[href^="/wlclop"] {
     background-position: 0px 0px;
     display: block;
     clear: none;
@@ -109,7 +109,7 @@ a[href^="/lbclop"] {
     background-image: url(%%lbclop%%)
     }
 
-a[href^="/lbclop"] {
+a[href^="/wlclop"] {
     background-position: 0px 0px;
     display: block;
     clear: none;
@@ -119,7 +119,7 @@ a[href^="/lbclop"] {
     background-image: url(%%lbclop%%)
     }
 
-a[href^="/lbshortvideo"] {
+a[href^="/wlshortvideo"] {
     background-position: 0px 0px;
     display: block;
     clear: none;
@@ -320,7 +320,7 @@ a[href^="/gottaspinfast"] {
     }
 
 
-a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalute"], a[href|="/lbcomicscrunch"], a[href|="/lbdive"], a[href|="/lbintro"], a[href|="/lbohthis"], a[href|="/lbpushthebutton"], a[href|="/lbrearing"], a[href|="/lbrelaxing"], a[href|="/lbwalk"], a[href|="/lbshrug"], a[href|="/lbteeny"], a[href|="/lbglance"], a[href|="/sbsmirk"], a[href|="/sonatastare"]
+a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/wlsalute"], a[href|="/wlcomicscrunch"], a[href|="/wldive"], a[href|="/wlintro"], a[href|="/wlohthis"], a[href|="/wlpushthebutton"], a[href|="/wlrearing"], a[href|="/wlrelaxing"], a[href|="/wlwalk"], a[href|="/wlshrug"], a[href|="/wlteeny"], a[href|="/wlglance"], a[href|="/sbsmirk"], a[href|="/sonatastare"]
 
  {
     display: block;
@@ -367,62 +367,62 @@ a[href|="/talltwi"] {
     height: 140px;
     background-position: -140px -210px
     }
-a[href|="/lbsalute"] {
+a[href|="/wlsalute"] {
     width: 161px;
     height: 140px;
     background-position: -233px -210px
     }
-a[href|="/lbcomicscrunch"] {
+a[href|="/wlcomicscrunch"] {
     width: 93px;
     height: 140px;
     background-position: -394px -210px
     }
-a[href|="/lbdive"] {
+a[href|="/wldive"] {
     width: 120px;
     height: 140px;
     background-position: -487px -210px
     }
-a[href|="/lbintro"] {
+a[href|="/wlintro"] {
     width: 222px;
     height: 140px;
     background-position: -0px -350px
     }
-a[href|="/lbohthis"] {
+a[href|="/wlohthis"] {
     width: 102px;
     height: 140px;
     background-position: -222px -350px
     }
-a[href|="/lbpushthebutton"] {
+a[href|="/wlpushthebutton"] {
     width: 238px;
     height: 140px;
     background-position: -324px -350px
     }
-a[href|="/lbglance"] {
+a[href|="/wlglance"] {
     width: 167px;
     height: 140px;
     background-position: -324px -350px
     }
-a[href|="/lbrearing"] {
+a[href|="/wlrearing"] {
     width: 100px;
     height: 140px;
     background-position: -562px -350px
     }
-a[href|="/lbrelaxing"] {
+a[href|="/wlrelaxing"] {
     width: 152px;
     height: 140px;
     background-position: -0px -490px
     }
-a[href|="/lbwalk"] {
+a[href|="/wlwalk"] {
     width: 134px;
     height: 140px;
     background-position: -152px -490px
     }
-a[href|="/lbshrug"] {
+a[href|="/wlshrug"] {
     width: 72px;
     height: 70px;
     background-position: -0px -140px
     }
-a[href|="/lbteeny"] {
+a[href|="/wlteeny"] {
     width: 50px;
     height: 50px;
     background-position: -72px -160px
