--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -399,7 +399,7 @@ a[href|="/rswagintosh"],
 a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/reeyup"],a[href|="/rb21"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/rnoooo"],a[href|="/rb23"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/rsquintyjack"],a[href|="/rb24"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/rajugh"],a[href|="/rb05"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/rdumbfabric"],a[href|="/rb25"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/rtrixiesmug"],a[href|="/rb06"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/rrarityannoyed"],a[href|="/rb26"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/rraritywhine"],a[href|="/rb27"],a[href|="/rrdcool"],a[href|="/rb37"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/rfacehoof"],a[href|="/rb38"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/rppseesyou"],a[href|="/rb39"],
 a[href|="/rrdsitting"],a[href|="/rc00"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rrdannoyed"],a[href|="/rc20"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/rtwistare"],a[href|="/rc21"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/rhahaha"],a[href|="/rc22"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/rflutterblush"],a[href|="/rc03"],a[href|="/rgross"],a[href|="/rc13"],a[href|="/rderpyhappy"],a[href|="/rtwidaw"],a[href|="/rc33"],a[href|="/rc23"],a[href|="/rajfrown"],a[href|="/rc04"],a[href|="/rhmmm"],a[href|="/rc14"],a[href|="/rjoy"],a[href|="/rc24"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/rraritysad"],a[href|="/rc05"],a[href|="/rfabulous"],a[href|="/rc15"],a[href|="/rderp"],a[href|="/rc25"],a[href|="/rc35"],a[href|="/rcadencesmile"],a[href|="/rcadancesmile"],a[href|="/rshiningpride"],a[href|="/rc36"],a[href|="/rlouder"],a[href|="/rc06"],a[href|="/rlunasad"],a[href|="/rc16"],a[href|="/rderpyshock"],a[href|="/rc26"],a[href|="/rpinkamina"],a[href|="/rc07"],a[href|="/rloveme"],a[href|="/rc17"],a[href|="/rlunagasp"],a[href|="/rc27"],a[href|="/rscootaloo"],a[href|="/rfluttercry"],a[href|="/rc37"],a[href|="/rc08"],a[href|="/rcelestia"],a[href|="/rc18"],a[href|="/rangel"],a[href|="/rc28"],a[href|="/rallmybits"],a[href|="/rsneakybelle"],a[href|="/rc38"],a[href|="/rc09"],a[href|="/rzecora"],a[href|="/rc19"],a[href|="/rphotofinish"],a[href|="/rc29"],a[href|="/rppreally"],a[href|="/rc39"],
 a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/rsotrue"],a[href|="/re22"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/rsbstare"],a[href|="/re13"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/re23"],a[href|="/rhuhhuh"],a[href|="/re04"],a[href|="/rabsmile"],a[href|="/re14"],a[href|="/rdealwithit"],a[href|="/re24"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/re05"],a[href|="/rwhooves"],a[href|="/re15"],a[href|="/rrdsalute"],a[href|="/re25"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/re06"],a[href|="/rcolgate"],a[href|="/re16"],a[href|="/rcheerilee"],a[href|="/re26"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/re07"],a[href|="/rabhuh"],a[href|="/re17"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/re27"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/rspikewtf"],a[href|="/re18"],a[href|="/rawwyeah"],a[href|="/re28"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/re19"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"], a[href|="/re31"], a[href|="/rlunamad"], a[href|="/re32"], a[href|="/rdiscordsad"], a[href|="/re33"], a[href|="/rmaud"], a[href|="/re34"], a[href|="/rpinkiepout"],
-a[href|="/rsmooze"], {
+a[href|="/rsmooze"], a[href|="/rmaudsitting"] {
 -webkit-transform:scaleX(-1);
 -moz-transform:scaleX(-1);
 -ms-transform:scaleX(-1);
@@ -500,6 +500,12 @@ a[href|="/maudfacehoof"]
 a[href|="/rmaudfacehoof"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: 0 -500%;}
 
+a[href|="/maudconfused"],a[href|="/mpconfused"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -100% -400%;}
+
+a[href|="/rmaudconfused"],a[href|="/rmpconfused"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -100% -500%;}
+
 a[href|="/maudheart"]
 {display:block;clear:none;float:left;width:131px;height:200px;background-image:url(%%maudpieheart%%)!important; background-position: 0 0;}
 
@@ -542,6 +548,11 @@ display:block;clear:none;float:left;width:76px;height:80px;background-image:url(
 background-position:0 -100%;
 }
 
+a[href|="/maudsitting"], a[href|="/rmaudsitting"] {
+display:block;clear:none;float:left;width:80px;height:70px;background-image:url(%%maudsitting%%)!important;
+background-position:0 0;
+}
+
 a[href|="/boulder"] {
 display:block;clear:none;float:left;width:70px;height:43px;background-image:url(%%boulder%%)!important;
 background-position:0 0;
@@ -555,6 +566,9 @@ a[href|="/maudsalute"]
 
 a[href|="/maudbored"]
 {display:block;clear:none;float:left;width:118px;height:150px;background-image:url(%%medium%%)!important; background-position: -365px 0; margin-bottom: -24px; position:relative; z-index: 9999999999999999999}
+
+a[href|="/maudshimmer"]
+{display:block;clear:none;float:left;width:151px;height:200px;background-image:url(%%maudshimmer%%)!important; background-position: 0 0; margin-bottom: -19px; position:relative; z-index: 9999999999999999999}
 
 a[href|="/maudcrunchy"]
 {display:block;clear:none;float:left;width:192px;height:150px;background-image:url(%%medium%%)!important; background-position: -483px 0;}
@@ -582,6 +596,9 @@ a[href|="/maudbrow"],a[href|="/mpbrow"]
 
 a[href|="/maudsmeel"],a[href|="/mpsmeel"]
 {display:block;clear:none;float:left;width:118px;height:150px;background-image:url(%%medium%%)!important; background-position: -361px -300px;}
+
+a[href|="/maudflip"]
+{display:block;clear:none;float:left;width:232px;height:145px;background-image:url(%%medium%%)!important; background-position: -479px -300px;}
 
 a[href|="/rsuperiormaud"],a[href|="/rsuperiormp"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-table%%)!important; background-position: 0 -200%;}
@@ -662,6 +679,9 @@ a[href|="/maudlookingback"],a[href|="/mplookingback"]
 a[href|="/rmaudlookingback"],a[href|="/rmplookingback"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-table%%)!important; background-position: -200% -700%;}
 
+a[href|="/maudpretty"]
+{display:block;clear:none;float:left;width:180px;height:200px;background-image:url(%%maudpretty%%)!important; background-position: 0 0;}
+
 a[href|="/umaudbro"], a[href|="/maudsmirk"] {
     display: block;
     clear: none;
@@ -675,6 +695,26 @@ a[href|="/umaudbro"], a[href|="/maudsmirk"] {
 a[href|="/maudsmirk"] {
     height: 130px !important;
     background-position: -0px -70px !important;
+}
+
+a[href|="/maudiopinkigi"], a[href|="/maudio"], a[href|="/pinkigi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 400px;
+    height: 200px;
+    background-position: -0px -0px;
+    background-image: url(%%piesisters%%) !important;
+}
+
+a[href|="/maudio"] {
+    width: 200px !important;
+    background-position: -0px -0px !important;
+}
+
+a[href|="/pinkigi"] {
+    width: 200px !important;
+    background-position: -200px -0px !important;
 }
 
 a[href|="/maudsign"], a[href|="/mpsign"]{
