--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -205,10 +205,10 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%pinkie-alarm-hat%%);
- width:70px;
- height:69px;
- margin-top:-44px;
+ background:url(%%discentia-hat%%);
+ width:60px;
+ height:60px;
+ margin-top:-35px;
  margin-left:5px;
  margin-bottom:0px;
  margin-right:-40px;
@@ -223,7 +223,7 @@ border-top-right-radius: 5px;
 .sidecontentbox a.author.id-t2_3l5j0 ,.sidecontentbox a.author.id-t2_4a7lu ,.sidecontentbox a.author.id-t2_4f80o ,.sidecontentbox a.author.id-t2_5agom ,.sidecontentbox a.author.id-t2_51isb ,.sidecontentbox a.author.id-t2_5eqe2,.sidecontentbox a.author.id-t2_6uo3t, .sidecontentbox a.author.id-t2_5dxi7, .sidecontentbox a.author.id-t2_3fvpf, .sidecontentbox a.author.id-t2_5o8ly ,.sidecontentbox a.author.id-t2_6gpcb ,.sidecontentbox ul.content li.more a {content:"";color:white;font-size:0pt;display:block}
 .sidecontentbox a.author.id-t2_3l5j0:before, .sidecontentbox a.author.id-t2_4a7lu:before ,.sidecontentbox a.author.id-t2_4f80o:before ,.sidecontentbox a.author.id-t2_5agom:before ,.sidecontentbox a.author.id-t2_51isb:before ,.sidecontentbox a.author.id-t2_51isb:after ,.sidecontentbox a.author.id-t2_5eqe2:before, .sidecontentbox a.author.id-t2_6uo3t:before, .sidecontentbox a.author.id-t2_5dxi7:before, .sidecontentbox a.author.id-t2_3fvpf:before, .sidecontentbox ul.content li.more a:before, .sidecontentbox a.author.id-t2_5o8ly:before, .sidecontentbox a.author.id-t2_6gpcb:before {font-size:10pt;color:#369;display:inline-block;}
 .sidecontentbox a.author.id-t2_3l5j0:before {content:"Lebal of the House of Usher"}
-.sidecontentbox a.author.id-t2_4a7lu:before {content:"xOrScHxMaNNx"}
+.sidecontentbox a.author.id-t2_4a7lu:before {content:"Orsch"}
 /*.sidecontentbox a.author.id-t2_55ojn:before {content:"Rainbow Brite"}*/
 .sidecontentbox a.author.id-t2_4f80o:before {content:"Opti"}
 .sidecontentbox a.author.id-t2_5agom:before {content:"Chinchy-bon"}
